# 2025_1_Assignment

Algorithm/: Main.java  example.txt  readme.txt
HW4/: Exercise3.ml  Exercise4.ml
cps_translate/: README.md  cps_translate.opam  dune-project
cps_translate/lib/: cps.ml  dune  lexer.mll  m0.ml  m0.mli  parser.mly
exn/: README.md  dune-project  exn.opam
exn/examples/: test9.xexp
exn/lib/: cps.ml  cps.mli  dune  lexer.mll  parser.mly  xexp.ml  xexp.mli
hw5/: GAN.ipynb  VAE.ipynb  collectSubmission.sh  collect_submission.ipynb
hw6/: black-box-attack.ipynb  cifar10_input.py  collectSubmission.sh  collect_submission.ipynb  mean_std.py  models.py  white-box-attack.ipynb
hw6/attacks/: fgsm_attack.py  nes_attack.py  pgd_attack.py
hw8/: inception.py  requirements.txt  todo.py  train.py
hw8/results/: classifier.pth
hw8/results/checkpoint-last/: config.json
hw9/: cartpole_vpg.ipynb  collectSubmission.sh  collect_submission.ipynb  lunarlander_dqn.ipynb  setup.py
hw9/rlkit.egg-info/: PKG-INFO  SOURCES.txt
hw9/rlkit/agents/: dqn_agent.py  pg_agent.py
hw9/rlkit/critics/: dqn_critic.py
hw9/rlkit/envs/box2d/: lunar_lander.py
hw9/rlkit/infrastructure/: dqn_utils.py  logger.py  replay_buffer.py  rl_trainer.py  utils.py
hw9/rlkit/policies/: argmax_policy.py  mlp_policy.py
k_/: README.md  dune-project  k_.opam
k_/examples/: Tree.k-  test3.k-  test4.k-  test5.k-
k_/lib/: dune  k.ml  lexer.mll  parser.mly  pp.ml
lambda/: README.md  dune-project  lambda.opam
lambda/examples/: test5.l
lambda/lib/: dune  evaluator.ml  lexer.mll  lexp.ml  parser.mly  pp.ml
lowfat/: README.md  dune-project  lowfat.opam
lowfat/lib/: dune  pp.ml  simple_checker.ml
m_interp/: README.md  dune-project  m_interp.opam
m_interp/lib/: dune  error.ml  lexer.mll  m.ml  parser.mly  pp.ml
nutritious/: README.md  dune-project  nutritious.opam
nutritious/lib/: dune  lexer.mll  m.ml  parser.mly  poly_checker.ml  pp.ml
rozettax/: README.md  dune-project  rozettax.opam
rozettax/examples/: test2.sm5
rozettax/lib/: dune  parser.ml  sm5.ml  sm5.mli  sonata.ml  sonata.mli  translator.ml
skeleton/c/: Makefile
skeleton/c/include/: hw3.h
skeleton/c/src/: hw3.c  main.c
skeleton/cpp/: Makefile
skeleton/cpp/include/: hw3.hpp
skeleton/cpp/src/: hw3.cpp  main.cpp
skeleton/java/: Main.java  Makefile
skeleton/java/input/: 2.in
skeleton/java/src/: HW3.java  Hole.java
skeleton/python/: Makefile  main.py
skeleton/python/src/: hw3.py
sm5/: README.md  dune-project  sm5.opam
sm5/examples/: test3.k-star
sm5/lib/: dune  k.ml  k.mli  lexer.mll  machine.ml  machine.mli  parser.mly  pp.ml  translator.ml
