(lang dune 3.15)

(name rozettax)

(generate_opam_files true)

(authors
 "오규혁 <ghoh@ropas.snu.ac.kr>"
 "이재호 <jhlee@ropas.snu.ac.kr>"
 "배요한 <yhbae@ropas.snu.ac.kr>"
 "이동권 <dklee@ropas.snu.ac.kr>"
 "최재승 <jschoi@ropas.snu.ac.kr>"
 "김진영 <jykim@ropas.snu.ac.kr>"
 "윤용호 <yhyoon@ropas.snu.ac.kr>"
 "조성근 <skcho@ropas.snu.ac.kr>"
 "허기홍 <khheo@ropas.snu.ac.kr>"
 "정영범 <dreameye@ropas.snu.ac.kr>"
 "이희종 <ihji@ropas.snu.ac.kr>"
 "박대준 <pudrife@ropas.snu.ac.kr>"
 "오학주 <pronto@ropas.snu.ac.kr>"
 "김덕환 <dk@ropas.snu.ac.kr>"
 "신재호 <netj@ropas.snu.ac.kr>"
 "최웅식 <wschoi@ropas.kaist.ac.kr>")

(maintainers "오규혁 <ghoh@ropas.snu.ac.kr>")

(package
 (name rozettax)
 (synopsis "RozettaX")
 (description "RozettaX")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
